tests/rosetta/transpiler/Haskell/99-bottles-of-beer-2.error
run: exit status 1

/workspace/mochi/tests/rosetta/transpiler/Haskell/99-bottles-of-beer-2.hs:74:41: error:
    • No instance for (RealFrac Int) arising from a use of ‘round’
    • In the second argument of ‘(!!)’, namely
        ‘round ((n / fromIntegral 10))’
      In the first argument of ‘newIORef’, namely
        ‘((tens !! round ((n / fromIntegral 10))))’
      In a stmt of a 'do' block:
        t <- newIORef ((tens !! round ((n / fromIntegral 10))))
   |
74 |                 t <- newIORef ((tens !! round ((n / fromIntegral 10))))
   |                                         ^^^^^

/workspace/mochi/tests/rosetta/transpiler/Haskell/99-bottles-of-beer-2.hs:74:51: error:
    • No instance for (Fractional Int) arising from a use of ‘/’
    • In the first argument of ‘round’, namely
        ‘((n / fromIntegral 10))’
      In the second argument of ‘(!!)’, namely
        ‘round ((n / fromIntegral 10))’
      In the first argument of ‘newIORef’, namely
        ‘((tens !! round ((n / fromIntegral 10))))’
   |
74 |                 t <- newIORef ((tens !! round ((n / fromIntegral 10))))
   |                                                   ^
